Fix: apply nowrap to tab title to avoid line break

--- a/public/styles/style-bootstrap.css
+++ b/public/styles/style-bootstrap.css
@@ -399,6 +399,7 @@ body {
     width: 100px;
     height: 24px;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 .nonenglish .topbar_td {
