--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -240,6 +240,7 @@ body {
     width: 100px;
     height: 24px;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 .nonenglish .topbar_td {
